--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Iframe Content</title>
+    <title>Демо | Бюджеты и показатели</title>
     <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+
         iframe {
             width: 100%;
-            height: 100vh;
+            height: 100%;
             border: none;
         }
     </style>
@@ -18,30 +28,36 @@
     <iframe id="myIframe" src="https://datalens.yandex/1w11n7upxh0wm?_no_controls=1"></iframe>
 
     <script>
-        // Функция для удаления элементов с указанными классами
-        function removeElementsFromIframe() {
+        function modifyIframeContent() {
             const iframe = document.getElementById('myIframe');
-            iframe.addEventListener('load', () => {
-                try {
-                    const iframeDoc = iframe.contentDocument || iframe.contentWindow.document;
-                    const elementsToRemove = [
-                        '.public-header__custom-section',
-                        '.dl-header-view__logo-section'
-                    ];
-
-                    elementsToRemove.forEach(selector => {
-                        const elements = iframeDoc.querySelectorAll(selector);
-                        elements.forEach(element => element.remove());
-                    });
-                } catch (error) {
-                    console.error('Ошибка при доступе к содержимому iframe:', error);
-                    console.log('Проверьте, не блокирует ли CORS доступ к содержимому iframe. Возможно, потребуется прокси.');
+            try {
+                const iframeDoc = iframe.contentDocument || iframe.contentWindow.document;
+                if (!iframeDoc) {
+                    console.error('Cannot access iframe content due to cross-origin restrictions.');
+                    return;
                 }
-            });
+
+                // Remove elements with the specified classes
+                const elementsToRemove = [
+                    '.public-header__custom-section',
+                    '.dl-header-view__logo-section'
+                ];
+
+                elementsToRemove.forEach(selector => {
+                    const elements = iframeDoc.querySelectorAll(selector);
+                    elements.forEach(element => {
+                        element.remove();
+                        console.log(`Removed element with class: ${selector}`);
+                    });
+                });
+            } catch (error) {
+                console.error('Error accessing iframe content:', error);
+                alert('Unable to modify iframe content due to cross-origin restrictions. Consider using a proxy server.');
+            }
         }
 
-        // Вызываем функцию после загрузки страницы
-        window.addEventListener('DOMContentLoaded', removeElementsFromIframe);
+        // Wait for the iframe to load before attempting to modify it
+        document.getElementById('myIframe').addEventListener('load', modifyIframeContent);
     </script>
 </body>
 
