--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <iframe id="myIframe" src="https://datalens.yandex/1w11n7upxh0wm?_no_controls=1"></iframe>
+    <iframe id="myIframe" src="https://datalens.yandex/1w11n7upxh0wm?_no_controls=1&_theme=dark"></iframe>
 
     <script>
         function modifyIframeContent() {
